Fix/suppress some SonarLint issues